wip: email list endpoint
