# models/utility.go
@@ -9,3 +9,7 @@ type StatusResponse struct {
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
+
+type EmailListResponse struct {
+	Emails []string `json:"emails"`
+}
